[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.47"
bytemuck = { version = "1.7.2", features = ["derive"] }
log = "0.4.14"
pollster = "0.2.4"
pretty_env_logger = "0.4.0"
wgpu = "0.12.0"
winit = "0.26.1"
raw-window-handle = "0.4.3"
x11-dl = "2.19.1"
